postgresql-common (67) UNRELEASED; urgency=low

  * 

 -- Martin Pitt <mpitt@debian.org>  Fri, 27 Oct 2006 12:15:01 +0200

postgresql-common (66) unstable; urgency=low

  * Add Japanese debconf translations. Thanks to Hideki Yamane!
    Closes: #393055
  * pg_upgradecluster: Use -X no-data-for-failed-tables only for 8.1. In
    8.2beta2 this got renamed to --no-data-for-failed-tables.

 -- Martin Pitt <mpitt@debian.org>  Fri, 27 Oct 2006 11:38:50 +0200

postgresql-common (65) unstable; urgency=low

  * pg_upgradecluster: Quiesce dropdb for already existing 'postgres'
    database.
  * pg_upgradecluster: Avoid harmless, but confusing error messages about role
    creation:
    - Do not use -c for pg_dumpall, since the target roles should not yet
      exist anyway.
    - Filter out the 'CREATE (ROLE|USER)' command for the db superuser, since
      it will already exist.
    - Testsuite: Check that pg_upgradecluster output contains no server error
      messages.
    - Closes: #389930

 -- Martin Pitt <mpitt@debian.org>  Sat,  7 Oct 2006 13:54:34 +0200

postgresql-common (64) unstable; urgency=low

  * Fix pg_ctlcluster regression from 63: 'database system is starting up'
    fatal error message caused immediate abortion of startup checks. Make the
    check easier and more robust, adapt test cases accordingly.
  * t/020_create_sql_remove.t: Add check that PL/Perl works. Check that
    -plperl-X.Y. is installed in t/001_packages.t.
  * t/{040_upgrade.t,041_upgrade_custompaths.t}: Check for pg_restore error
    messages during upgrade.
  * pg_upgradecluster: Avoid pg_restore errors during upgrade (they were
    nonfatal, but look ugly:)
    - Drop 'postgres' db in 8.1+ target cluster if the source cluster already
      has it.
    - Do not use pg_restore's --create for template1.
    - Fix hardcoded library paths before dumping/restoring the cluster, not
      after, to avoid error messages about failed library loads.
