@@ -1,8 +1,10 @@
 postgresql-common (67) UNRELEASED; urgency=low
 
-  * 
+  *t/040_upgrade.t: Skip the user/group name clash test when there are only
+   servers >= 8.1 installed, since it does not apply to them and breaks the
+   test suite.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 27 Oct 2006 12:15:01 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sat, 11 Nov 2006 22:45:29 -0800
 
 postgresql-common (66) unstable; urgency=low
 
